@@ -41,6 +41,12 @@ def pytest_unconfigure(config, __multicall__):
     assert len2 < config._numfiles + 7, out2
 
 
+def pytest_runtest_setup(item):
+    item._oldir = py.path.local()
+
+def pytest_runtest_teardown(item):
+    item._oldir.chdir()
+
 def pytest_generate_tests(metafunc):
     multi = getattr(metafunc.function, 'multi', None)
     if multi is not None:
