@@ -48,3 +48,6 @@ changedir=testing
 commands=
     {envpython} {envbindir}/py.test-jython --no-tools-on-path \
         -rfsxX --junitxml={envlogdir}/junit-{envname}2.xml [acceptance_test.py plugin]
+
+[pytest]
+minversion=2.0
